--- a/CRM/Views/Fee/AddFee.cshtml
+++ b/CRM/Views/Fee/AddFee.cshtml
@@ -51,7 +51,9 @@
                                                 <select id="ddlSubject" asp-for="Subject" asp-items="Model.ClassList" class="form-control"></select>
                                             </div>
                                         </div>
+                                        <div class="col-md-4">
 
+                                        </div>
                                         <div class="col-md-4">
                                             <div class="form-group">
                                                 <label>Course</label>
