worked on list filters

--- a/CRM/Views/Student/Index.cshtml
+++ b/CRM/Views/Student/Index.cshtml
@@ -14,8 +14,8 @@
             <div class="row mb-2">
                 <div class="col-sm-6">
                     <ol class="breadcrumb float-sm-left">
-                        <li class="breadcrumb-item"><a href="#">Student</a></li>
-                        <li class="breadcrumb-item active">Add New Student</li>
+                        <li class="breadcrumb-item"><a href="../Student/List">List</a></li>
+                        <li class="breadcrumb-item active">Add Student</li>
                     </ol>
                 </div>
             </div>
