--- a/CRM/Views/Student/List.cshtml
+++ b/CRM/Views/Student/List.cshtml
@@ -29,19 +29,19 @@
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label>Class</label>
-                                <select id="ddlClass" asp-items="Model.ClassList" class="form-control"></select>
+                                <select id="ddlClass" asp-items="Model.ClassList" class="form-control"> <option>Select</option></select>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label>Subject</label>
-                                <select id="ddlSubject" asp-items="Model.CourseList" class="form-control"></select>
+                                <select id="ddlSubject" asp-items="Model.CourseList" class="form-control"> <option>Select</option></select>
                             </div>
                         </div>
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label>Course</label>
-                                <select id="ddlCourse" asp-items="Model.SubjectList" class="form-control"></select>
+                                <select id="ddlCourse" asp-items="Model.SubjectList" class="form-control"> <option>Select</option></select>
                             </div>
                         </div>
                         <div class="col-md-3">
@@ -120,6 +120,21 @@
         var BASE_URL = "@baseUrl";
 
 
+        window.onload = function () {
+
+            // Example 3: Change events (optional)
+            $("#ddlClass, #ddlSubject, #ddlCourse, #ddlRegPvt").change(function () {
+                $("#tblStudentList tbody").empty();
+                SearchStudent();
+            });
+
+            SearchStudent();
+
+            //$("#ddlClass ddlSubject ddlCourse ddlRegPvt").change(function () {
+            //    SearchStudent();
+            //});
+        };
+
 
         function SearchStudent() {
 
@@ -144,7 +159,7 @@
 
         function TableData(tableData)
         {
-            
+            $("#tblStudentList tbody").empty();
             $.each(tableData.data, function (index, element) {
                 $("#tblStudentList").append("<tr><td>" + index + "</td><td>" + element.id + "</td><td>" + element.formNo +
                     "</td><td>" + element.name + "</td><td>" + element.session + "</td><td>" + element.subject +
