--- a/CRM/Views/Shared/_MasterLayout.cshtml
+++ b/CRM/Views/Shared/_MasterLayout.cshtml
@@ -257,7 +257,7 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="../layout/top-nav.html" class="nav-link">
+                                    <a href="../Fee/SearchForFee" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Search Student</p>
                                     </a>
