--- a/CRM/Views/Shared/_MasterLayout.cshtml
+++ b/CRM/Views/Shared/_MasterLayout.cshtml
@@ -184,7 +184,7 @@
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
-     with font-awesome or any other icon font library -->
+    with font-awesome or any other icon font library -->
                         <li class="nav-item">
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
@@ -226,6 +226,31 @@
                             <a href="#" class="nav-link">
                                 <i class="nav-icon fas fa-copy"></i>
                                 <p>
+                                    Admission
+                                    <i class="fas fa-angle-left right"></i>
+                                </p>
+                            </a>
+                            <ul class="nav nav-treeview">
+                                <li class="nav-item">
+                                    <a href="../Admission/Index" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>List</p>
+                                    </a>
+                                </li>
+                                <li class="nav-item">
+                                    <a href="../Admission/NewAdmission" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>New Admission</p>
+                                    </a>
+                                </li>
+
+
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#" class="nav-link">
+                                <i class="nav-icon fas fa-copy"></i>
+                                <p>
                                     Student
                                     <i class="fas fa-angle-left right"></i>
                                 </p>
@@ -246,6 +271,7 @@
 
                             </ul>
                         </li>
+
 
                         <li class="nav-item">
                             <a href="#" class="nav-link">
