worked on payment section

--- a/CRM/Views/Shared/_MasterLayout.cshtml
+++ b/CRM/Views/Shared/_MasterLayout.cshtml
@@ -283,15 +283,15 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="../Fee/SearchForFee" class="nav-link">
+                                    <a href="../Payment/Index" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Search Student</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="../layout/top-nav.html" class="nav-link">
+                                    <a href="../Payment/Index" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>List</p>
+                                        <p>Payment List</p>
                                     </a>
                                 </li>
 
