--- a/CRM/Views/Shared/_MasterLayout.cshtml
+++ b/CRM/Views/Shared/_MasterLayout.cshtml
@@ -195,21 +195,28 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
+                                    <a href="../Class" class="nav-link">
+                                        <i class="far fa-circle nav-icon"></i>
+                                        <p>Class</p>
+                                    </a>
+                                </li>
+
+                                <li class="nav-item">
                                     <a href="../Year" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Year</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="../Suject" class="nav-link">
+                                    <a href="../Session" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Course</p>
+                                        <p>Session</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="../Course" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
-                                        <p>Subject</p>
+                                        <p>Course</p>
                                     </a>
                                 </li>
                                 <li class="nav-item">
@@ -257,7 +264,7 @@
                             </a>
                             <ul class="nav nav-treeview">
                                 <li class="nav-item">
-                                    <a href="../Student/Registration" class="nav-link">
+                                    <a href="../Student/Index" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Registration New</p>
                                     </a>
