--- a/CRM/Views/Class/Index.cshtml
+++ b/CRM/Views/Class/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CRM.Models.MstYear>
+﻿@model IEnumerable<CRM.Models.MstClass>
 
 @{
     Layout = "~/Views/Shared/_MasterLayout.cshtml";
@@ -28,7 +28,7 @@
                 <div class="col-md-12">
 
                     <button type="button" class="btn btn-default" data-toggle="modal" data-target="#modal-default">
-                        Add new Year
+                        Add new Class
                     </button>
 
 
@@ -60,8 +60,8 @@
                                     <tr>
                                         <td>@i</td>
                                         <td>@item.Name</td>
-                                        <td>@item.CreatedBy</td>
-                                        <td>@item.CreatedDateTime</td>
+                                        <td>@item.CreateBy</td>
+                                        <td>@item.CreateDatetime</td>
                                         <td>
 
                                             <a class="btn btn-info btn-sm" data-toggle="modal" data-target="#editModal" onclick="editClass(@item.Id)">
@@ -102,7 +102,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Edit Year</h4>
+                <h4 class="modal-title">Edit Class</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -110,7 +110,7 @@
             <div class="modal-body">
                 <div class="form-group">
                     <input type="hidden" id="editId" />
-                    <label>Year</label>
+                    <label>Class Name</label>
                     <input type="text" class="form-control" id="editName" />
                 </div>
             </div>
@@ -129,14 +129,14 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Add New Year</h4>
+                <h4 class="modal-title">Add New Class</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
                 <div class="form-group">
-                    <label>Year Name</label>
+                    <label>Class Name</label>
                     <input type="text" id="className" class="form-control" />
                 </div>
             </div>
@@ -167,7 +167,7 @@
                 return;
             }
 
-            $.post(BASE_URL+"/Year/Create", { className: name }, function (res) {
+            $.post(BASE_URL +"/Class/Create", { className: name }, function (res) {
                 if (res.success) location.reload();
                 else alert(res.message);
             });
@@ -175,7 +175,7 @@
 
         // OPEN EDIT POPUP
         function editClass(id) {
-            $.get(BASE_URL +"/Year/Get?id=" + id, function (data) {
+            $.get(BASE_URL +"/Class/Get?id=" + id, function (data) {
                 $("#editId").val(data.id);
                 $("#editName").val(data.name);
                 $("#editModal").show();
@@ -184,7 +184,7 @@
 
         // UPDATE
         function updateClass() {
-            $.post(BASE_URL +"/Year/Update",
+            $.post(BASE_URL +"/Class/Update",
                 {
                     id: $("#editId").val(),
                     className: $("#editName").val()
@@ -202,7 +202,7 @@
         // DELETE
         function deleteClass(id) {
             if (confirm("Are you sure?")) {
-                $.post(BASE_URL +"/Year/Delete", { id: id }, function () {
+                $.post(BASE_URL +"/Class/Delete", { id: id }, function () {
                     location.reload();
                 });
             }
